traefik/demo-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-v1
  namespace: demo
spec:
  selector:
    app: hello-app-v1
  ports:
    - name: http
      targetPort: 8090
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello-app-v2
  namespace: demo
spec:
  selector:
    app: hello-app-v2
  ports:
    - name: http
      targetPort: 8090
      port: 80
