traefik/demo-2/traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trafik-ingress
  namespace: demo
  annotations:
#    traefik.ingress.kubernetes.io/service-weights: /
#      hello-app-v1: 60%  # or 60
#      hello-app-v2: 40%  # or 40
    kubernetes.io/ingress.class: traefik
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: app.io
      http:
        paths:
          - backend:
            service:
              name: hello-app-v1
              port:
                number: 80
            path: /api/v1
            pathType: Prefix
    - host: demo.io
      http:
        paths:
          - backend:
            service:
              name: hello-app-v1
              port:
                number: 80
            path: /api/v2
            pathType: Prefix
